--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -18,8 +18,9 @@ that returns the text from the cursor to the end of the current buffer.
 ## Step 3: Query the DeepSeek API
 
 When the user presses `<M-ESC>`, the function `suggest()` is called. That is the behavior I want.
+Also, now, if in INSERT mode and the user presses a letter key, a punctuation key, or a space, `suggest()` is called.
 
-Now I want that if in INSERT mode and the user presses a letter key, a punctuation key, or a space, `suggest()` is called.
+The problem is that `suggest()` is immediately called: I want to wait for the user to finish typing before calling it.
 
 Tell me what modifications I need to make to the code in order to achieve that.
 
