--- a/.ai-history/2025-01-07_21h-33m-42s_chatgpt_1736274822.md
+++ b/.ai-history/2025-01-07_21h-33m-42s_chatgpt_1736274822.md
@@ -1,3 +1,20 @@
+# Getting the text from the beginning of the current line to the cursor
+
+I need a function that returns the text from the beginning of the current line to the cursor.
+Taht text will be the prompt for the completion.
+
+Name the function `M.get_text_before_cursor_line()`.
+
+
+
+
+# This is gpt-4o-mini answer (2k in, 1k out)
+
+To add the function `M.get_text_before_cursor_line()` that returns the text from the beginning of the current line to the cursor, you can modify the `lua/rktmb-deepseek-complete.lua` file. Below is the updated content of the file with the new function included.
+
+### Updated `lua/rktmb-deepseek-complete.lua`
+
+```lua
 -- Initialize a module
 local M = {}
 
@@ -23,39 +40,6 @@ function M.remove_markdown_delimiters(text)
   return table.concat(lines, "\n")
 end
 
---[[ Adds or updates an extmark with the given text.
---  If an extmark already exists, it will be updated. Otherwise, a new one will be created.
---  The extmark is placed after the current cursor position.
---]]
-function M.set_suggestion_extmark(suggestion)
-  local current_buf = vim.api.nvim_get_current_buf()
-  local position = vim.api.nvim_win_get_cursor(0)
-  local row = position[1] - 1 -- Adjust to 0-based indexing
-  local col = position[2]
-
-  if _G.current_extmark_id then
-    -- Update existing extmark
-    vim.api.nvim_buf_set_extmark(current_buf, _G.ns_id, _G.current_extmark_id, {
-      row = row,
-      col = col,
-      opts = {
-        end_row = row + #vim.split(suggestion, '\n', true) -1,
-        end_col = string.len(vim.split(suggestion, '\n', true)[#vim.split(suggestion, '\n', true)]),
-        virt_text =  {{suggestion, "Comment"}},
-        virt_text_pos = "overlay"
-      }
-    })
-  else
-    -- Create new extmark
-    _G.current_extmark_id = vim.api.nvim_buf_set_extmark(current_buf, _G.ns_id, row, col, {
-      end_row = row + #vim.split(suggestion, '\n', true) -1,
-      end_col = string.len(vim.split(suggestion, '\n', true)[#vim.split(suggestion, '\n', true)]),
-      virt_text = {{suggestion, "Comment"}},
-      virt_text_pos = "overlay"
-    })
-  end
-end
-
 function M.get_text_before_cursor()
   M.log("get_text_before_cursor")
   local position = vim.api.nvim_win_get_cursor(0)
@@ -70,6 +54,22 @@ function M.get_text_before_cursor()
   return result
 end
 
+-- New function to get text from the beginning of the current line to the cursor
+function M.get_text_before_cursor_line()
+  M.log("get_text_before_cursor_line")
+  local position = vim.api.nvim_win_get_cursor(0)
+  local current_line = position[1]
+  local current_col = position[2]
+  M.log(vim.inspect(current_line))
+  M.log(vim.inspect(current_col))
+  
+  -- Get the current line's content
+  local line_content = vim.api.nvim_buf_get_lines(0, current_line - 1, current_line, false)[1]
+  local result = string.sub(line_content, 1, current_col)
+  M.log(result)
+  return result
+end
+
 function M.get_text_after_cursor()
   M.log("get_text_after_cursor")
   local position = vim.api.nvim_win_get_cursor(0)
@@ -80,19 +80,6 @@ function M.get_text_after_cursor()
   local lines = vim.api.nvim_buf_get_lines(0, current_line - 1, -1, false)
   lines[1] = string.sub(lines[1], current_col + 1)  -- Get text from the cursor position in the current line
   local result = table.concat(lines, "\n")
-  M.log(result)
-  return result
-end
-
-function M.get_text_before_cursor_line()
-  M.log("get_text_before_cursor_line")
-  local position = vim.api.nvim_win_get_cursor(0)
-  local current_line = position[1]
-  local current_col = position[2]
-  M.log(vim.inspect(current_line))
-  M.log(vim.inspect(current_col))
-  local line = vim.api.nvim_buf_get_lines(0, current_line - 1, current_line, false)[1]
-  local result = string.sub(line, 1, current_col)
   M.log(result)
   return result
 end
@@ -122,27 +109,28 @@ function M.get_current_buffer_name()
   return vim.api.nvim_buf_get_name(0)
 end
 
-
-function M.build_messages_table(text_before_cursor, text_after_cursor, line_to_continue)
+function M.build_messages_table(text_before_cursor, text_after_cursor)
   local buffers = M.get_open_buffers()
   local messages = {}
   table.insert(messages, {
     role = "system",
     content = "You are a software developer assistant that will complete the code from the surcor position, based on the provided context."
     .. " Just answer with indented raw code, NO explanations, NO markdown formatting."
-    .. " The concatenation of the code before the cursor,"
-    .. " the code you propose,"
-    .. " AND the code after your suggestion"
+    .. " The concatenation of the text before the cursor,"
+    .. " the text you propose,"
+    .. " AND the text after your suggestion"
     .. " MUST be valid and consistent."
-    .. " You continue the code, so start your suggestion with the next word to be placed after the cursor."
+    .. " You continue the text, so start your suggestion with the next word to be placed after the cursor."
     })
-  table.insert(messages, { role = "user", content = "I need you to complete the code." })
+  table.insert(messages, { role = "user", content = "I need you to complete the text." })
 
   for _, buf in ipairs(buffers) do
     local filename = vim.api.nvim_buf_get_name(buf)
-    local content = M.get_buffer_content(buf)
-    table.insert(messages, { role = "assistant", content = "Give me the content of `" .. filename .. "`" })
-    table.insert(messages, { role = "user", content = "The content of `" .. filename .. "` is:\n```\n" .. content .. "\n```" })
+    if not filename:match("%%%%%%%%.md$") then  -- Lua pattern matching for ".md" at the end
+      local content = M.get_buffer_content(buf)
+      table.insert(messages, { role = "assistant", content = "Give me the content of `" .. filename .. "`" })
+      table.insert(messages, { role = "user", content = "The content of `" .. filename .. "` is:\n```\n" .. content .. "\n```" })
+    end
   end
   table.insert(messages, { role = "assistant", content = "What is the current buffer?" })
   table.insert(messages, { role = "user", content = "The current buffer is `" .. M.get_current_buffer_name() .. "`" })
@@ -150,8 +138,13 @@ function M.build_messages_table(text_before_cursor, text_after_cursor, line_to_c
   table.insert(messages, { role = "user", content = "From the begining of the buffer to the cursor, we have:\n```\n" .. text_before_cursor .. "\n```" })
   table.insert(messages, { role = "assistant", content = "What is after the cursor?" })
   table.insert(messages, { role = "user", content = "From the cursor to the end of the buffer, we have:\n```\n" .. text_after_cursor .. "\n```" })
-  table.insert(messages, { role = "assistant", content = "Give me the line you want me to continue."})
-  table.insert(messages, { role = "user", content = line_to_continue })
+  table.insert(messages, { role = "assistant", content = "What line do you want me to continue?" })
+  table.insert(messages, {
+    role = "user",
+    content = "Get the text from the beginning of the buffer to the cursor and write a continuation of that line."
+            .." Be consistent with the text after the cursor. "
+            .." You continue the text, so start your suggestion with the next word to be placed after the cursor."
+            .." The concatenation of the text before the cursor, the text you propose, and the text after your suggestion MUST be valid."})
   -- log the messages
   M.log("============ Messages table:")
   for _, message in ipairs(messages) do
@@ -162,5 +155,12 @@ function M.build_messages_table(text_before_cursor, text_after_cursor, line_to_c
   return messages
 end
 
-
 return M
+```
+
+### Explanation of Changes
+- **New Function**: The function `M.get_text_before_cursor_line()` has been added. It retrieves the text from the beginning of the current line to the cursor position.
+- **Logging**: The function logs its actions for debugging purposes.
+
+You can now use `M.get_text_before_cursor_line()` to get the desired text for your completion prompt.
+
