--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -18,9 +18,18 @@ that returns the text from the cursor to the end of the current buffer.
 ## Step 3: Query the DeepSeek API
 
 When the user presses `<M-ESC>`, the function `suggest()` is called. That is the behavior I want.
-Also, now, if in INSERT mode and the user presses a letter key, a punctuation key, or a space, `suggest()` is called.
+Also, now, if in INSERT mode and the user presses the space key, `suggest()` is called.
 
-The problem is that `suggest()` is immediately called: I want to wait for the user to finish typing before calling it.
+That is the behavior I want.
+
+## Step 4: Insert the suggestion as extmark
+
+Now I want to insert the returned by the DeepSeek API as an extmark.
+
+The extmark will start after the cursor position, NOT at the end of the line.
+
+We will use the `nvim_buf_set_extmark()` function to do that.
+
+The DeepSeek API response is a multiline string, so there might be a processing step to split it into lines.
 
 Tell me what modifications I need to make to the code in order to achieve that.
-
