--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -24,24 +24,10 @@ That is the behavior I want.
 
 ## Step 4: Insert the suggestion as extmark
 
-Now I want to insert the returned by the DeepSeek API as an extmark.
+Now the suggestion returned by the DeepSeek API is inserted as an extmark.
+The extmark starts after the cursor position, NOT at the end of the line.
 
-The extmark will start after the cursor position, NOT at the end of the line.
+Problem: The DeepSeek API response is a multiline string and it is displayed with `^@` at the end of each line.
 
-We will use the `nvim_buf_set_extmark()` function to do that.
-
-The DeepSeek API response is a multiline string, so there might be a processing step to split it into lines.
-
-Tell me what modifications I need to make to the code in order to achieve that.
-
-# Invalid `end_row` : out of range
-
-When `M.set_suggestion_extmark()` is called with the suggestion returned by the DeepSeek API, I get the following error:
-
-```
-Error executing vim.schedule lua callback : rktmb-deepseek-complete.lua:57: Invalid `end_row` : out of range
-```
-
-I have no data sample to reproduce this error, may be you can find it out.
-Analyze the code and tell me what actions should be made.
+Tell me what modifications I need to make to the code in order to really split the suggestion into lines.
 
