--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -27,7 +27,10 @@ That is the behavior I want.
 Now the suggestion returned by the DeepSeek API is inserted as an extmark.
 The extmark starts after the cursor position, NOT at the end of the line.
 
-Problem: The DeepSeek API response is a multiline string and it is displayed with `^@` at the end of each line.
+Problem: 
+- The DeepSeek API response is a multiline string and it was displayed with `^@` at the end of each line.
+- I already tried to fix it by splitting the string into lines and insert each line as a separate extmark
+- The current result is that each inserted extmark is displayed one after the other, on the same line: I expect each extmark to be displayed each one on a separate line.
 
-Tell me what modifications I need to make to the code in order to really split the suggestion into lines.
+Tell me what modifications I need to make each extmark to be displayed on a separate line.
 
