adapt col to multiline

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -34,3 +34,13 @@ Problem:
 
 Tell me what modifications I need to make each extmark to be displayed on a separate line.
 
+# Error executing vim.schedule lua callback : rktmb-deepseek-complete.lua:46: Invalid `col` : out of range
+
+When `M.set_suggestion_extmark()` is called with the suggestion returned by the DeepSeek API, I get the following error:
+
+```
+Error executing vim.schedule lua callback : rktmb-deepseek-complete.lua:46: Invalid `col` : out of range
+```
+
+I have no data sample to reproduce this error, may be you can find it out.
+Analyze the code and tell me what actions should be made.
