--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -42,5 +42,10 @@ When `M.set_suggestion_extmark()` is called with the suggestion returned by the 
 Error executing vim.schedule lua callback : rktmb-deepseek-complete.lua:46: Invalid `col` : out of range
 ```
 
-I have no data sample to reproduce this error, may be you can find it out.
+This was the response from the DeepSeek API:
+
+```json
+{"role":"assistant","content":"```\nvim.opt.cursorline = true\nvim.opt.cursorcolumn = true\n```"}
+```
+
 Analyze the code and tell me what actions should be made.
