o1 on pushing down

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -28,24 +28,9 @@ Now the suggestion returned by the DeepSeek API is inserted as an extmark.
 The extmark starts after the cursor position, NOT at the end of the line.
 
 Problem: 
-- The DeepSeek API response is a multiline string and it was displayed with `^@` at the end of each line.
-- I already tried to fix it by splitting the string into lines and insert each line as a separate extmark
-- The current result is that each inserted extmark is displayed one after the other, on the same line: I expect each extmark to be displayed each one on a separate line.
+- The DeepSeek API response is a multiline string 
+- The extmark covers the lines below the cursor position
 
-Tell me what modifications I need to make each extmark to be displayed on a separate line.
-
-# Error executing vim.schedule lua callback : rktmb-deepseek-complete.lua:46: Invalid `col` : out of range
-
-When `M.set_suggestion_extmark()` is called with the suggestion returned by the DeepSeek API, I get the following error:
-
-```
-Error executing vim.schedule lua callback : rktmb-deepseek-complete.lua:46: Invalid `col` : out of range
-```
-
-This was the response from the DeepSeek API:
-
-```json
-{"role":"assistant","content":"```\nvim.opt.cursorline = true\nvim.opt.cursorcolumn = true\n```"}
-```
-
-Analyze the code and tell me what actions should be made.
+Tell me what modifications I need to make 
+- the first line of the suggestion to be displayed on the same line as the cursor
+- If the suggestion is more thant one line: make the remaining suggestion lines to push down the text below the cursor in order to avoid the overlap.
