--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -26,11 +26,21 @@ That is the behavior I want.
 
 Now the suggestion returned by the DeepSeek API is inserted as an extmark.
 The extmark starts after the cursor position, NOT at the end of the line.
+The suggestion first line is displayed on the same line as the cursor and the remaining lines are displayed below the cursor, 
+pushing down the text below the cursor.
 
-Problem: 
-- The DeepSeek API response is a multiline string 
-- The extmark covers the lines below the cursor position
+That is the expected behavior.
 
-Tell me what modifications I need to make 
-- the first line of the suggestion to be displayed on the same line as the cursor
-- If the suggestion is more thant one line: make the remaining suggestion lines to push down the text below the cursor in order to avoid the overlap.
+## Step 5: Avoid trigerring the suggestion too often
+
+The suggestion is triggered each time the user type the space key.
+
+When the user types fast, the suggestion is triggered multiple times in parallell (because it is asynchronous)
+and the response from the DeepSeek API is not even received when the user requests a new suggestion.
+
+I want to silently abort HTTP call to the API
+- If the plugin is still waiting for a response from the API.
+- If API response has been received within the last 500 milliseconds.
+
+Propose me the changes I need to make to the code in order to achieve that.
+
