clear a bit more when typing

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -34,13 +34,17 @@ That is the expected behavior.
 ## Step 5: Avoid trigerring the suggestion too often
 
 The suggestion is triggered each time the user type the space key.
+When the user types fast, the suggestion is triggered only if the last HTTP response has been received for more than 1 second.
 
-When the user types fast, the suggestion is triggered multiple times in parallell (because it is asynchronous)
-and the response from the DeepSeek API is not even received when the user requests a new suggestion.
+## Step 6: Clear the suggestion when the user types.
 
-I want to silently abort HTTP call to the API
-- If the plugin is still waiting for a response from the API.
-- If API response has been received within the last 500 milliseconds.
+As the user types, the suggestion is displayed as an extmark.
+But as far as the user types, the suggestion must be cleared.
 
-Propose me the changes I need to make to the code in order to achieve that.
+If a new suggestion comes, the old suggestion must be cleared.
 
+IF the user continues typing, the suggestion must be cleared and the new suggestion will be displayed when it arrives.
+
+This behaviour must be repeatable any time the user types.
+
+Tell me the modifications I need to make to the code in order to achieve that.
