--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -40,11 +40,16 @@ When the user types fast, the suggestion is triggered only if the last HTTP resp
 
 As the user types, the suggestion is displayed as an extmark.
 But as far as the user types, the suggestion must be cleared.
-
 If a new suggestion comes, the old suggestion must be cleared.
-
-IF the user continues typing, the suggestion must be cleared and the new suggestion will be displayed when it arrives.
-
+If the user continues typing, the suggestion must be cleared and the new suggestion will be displayed when it arrives.
 This behaviour must be repeatable any time the user types.
 
-Tell me the modifications I need to make to the code in order to achieve that.
+The current code implements those behaviors, but it has one problem:
+- Changing the text in the buffer will cause the suggestion to be cleared.
+- When the suggestion pushes down the existing text, it performs a text change.
+- When making the place for himself, the suggestion is cleared.
+
+To avoid that, I want to configure the suggestion clearing not when the text is changed but when the user types a printable character.
+
+Tell me the modifications I need to make the suggestion clearing to happen only when the user types a printable character.
+
