--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -44,12 +44,10 @@ If a new suggestion comes, the old suggestion must be cleared.
 If the user continues typing, the suggestion must be cleared and the new suggestion will be displayed when it arrives.
 This behaviour must be repeatable any time the user types.
 
-The current code implements those behaviors, but it has one problem:
-- Changing the text in the buffer will cause the suggestion to be cleared.
-- When the suggestion pushes down the existing text, it performs a text change.
-- When making the place for himself, the suggestion is cleared.
+The current code implements those behaviors, but it has one problem: When clearing a multi-line suggestion, there are many blank lines left behind.
 
-To avoid that, I want to configure the suggestion clearing not when the text is changed but when the user types a printable character.
+To avoid that, I want to store the number of lines that has been pushed down by the suggestion.
+Then, when clearing the suggestion, I want to remove the lines that have been pushed down.
 
-Tell me the modifications I need to make the suggestion clearing to happen only when the user types a printable character.
+Tell me the modifications I need to make the suggestion clearing to revert the lines that have been pushed down.
 
