remove when typing

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -33,21 +33,17 @@ That is the expected behavior.
 
 ## Step 5: Avoid trigerring the suggestion too often
 
-The suggestion is triggered each time the user type the space key.
-When the user types fast, the suggestion is triggered only if the last HTTP response has been received for more than 1 second.
+When the user types fast, the suggestion may only be triggered if the last HTTP response has been received for more than 1 second.
+That is the behavior I want.
 
 ## Step 6: Clear the suggestion when the user types.
 
-As the user types, the suggestion is displayed as an extmark.
-But as far as the user types, the suggestion must be cleared.
-If a new suggestion comes, the old suggestion must be cleared.
-If the user continues typing, the suggestion must be cleared and the new suggestion will be displayed when it arrives.
-This behaviour must be repeatable any time the user types.
+As the user types `<M-ESC>` key, a suggestion is triggered and the suggestion is displayed as an extmark.
+But if the user continues typing, the suggestion must be cleared.
+If the types `<M-ESC>` key again, the suggestion must be triggered and the new suggestion will be displayed when it arrives.
+This must be repeatable any number of times.
 
-The current code implements those behaviors, but it has one problem: When clearing a multi-line suggestion, there are many blank lines left behind.
+Note that inserting suggestions is a text modification, so be careful to not delete the suggestion when inserting it.
 
-To avoid that, I want to store the number of lines that has been pushed down by the suggestion.
-Then, when clearing the suggestion, I want to remove the lines that have been pushed down.
-
-Tell me the modifications I need to make the suggestion clearing to revert the lines that have been pushed down.
+Tell me the modifications I need to make the suggestion clearing .
 
