--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -45,5 +45,12 @@ This must be repeatable any number of times.
 
 Note that inserting suggestions is a text modification, so be careful to not delete the suggestion when inserting it.
 
+With the current code, after the suggestion is displayed and I type something, I get the following error:
+
+```
+Error detected while processing InsertCharPre Autocommands for "*":
+Error executing lua callback: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:29: E565: Not allowed to change text or change window
+```
+
 Tell me the modifications I need to make the suggestion clearing .
 
