--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -39,18 +39,17 @@ That is the behavior I want.
 ## Step 6: Clear the suggestion when the user types.
 
 As the user types `<M-ESC>` key, a suggestion is triggered and the suggestion is displayed as an extmark.
-But if the user continues typing, the suggestion must be cleared.
-If the types `<M-ESC>` key again, the suggestion must be triggered and the new suggestion will be displayed when it arrives.
-This must be repeatable any number of times.
+If the user continues typing, the suggestion is cleared.
+If the types `<M-ESC>` key again, the suggestion is triggered and the new suggestion is displayed when it arrives.
+This is repeatable any number of times.
 
-Note that inserting suggestions is a text modification, so be careful to not delete the suggestion when inserting it.
+This is the behavior I want.
 
-With the current code, after the suggestion is displayed and I type something, I get the following error:
+## Step 7: accept the suggestion word by word
 
-```
-Error detected while processing InsertCharPre Autocommands for "*":
-Error executing lua callback: ....local/share/nvim/lazy/deepseek-complete/plugin/init.lua:29: E565: Not allowed to change text or change window
-```
+When a suggestion is displayed, I want the user to be able to accept it word by word with the `<M-Right>` key.
+So, as far as there is a suggestion, if the user presses `<M-Right>`, 
+the first word of the suggestion is accepted and transformed into text at the same position.
 
-Tell me the modifications I need to make the suggestion clearing .
+Tell me the modifications I need to make in order to achieve that.
 
