--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -51,5 +51,10 @@ When a suggestion is displayed, I want the user to be able to accept it word by 
 So, as far as there is a suggestion, if the user presses `<M-Right>`, 
 the first word of the suggestion is accepted and transformed into text at the same position.
 
-Tell me the modifications I need to make in order to achieve that.
+I implemented the logic for that in the `accept_suggestion_word()` function, but there are two problems:
+- When the suggestion is on the same line as the cursor, it accepts the whole line.
+- When the suggestion is directly on the line below the cursor, I get the error `'replacement string' item contains newlines`.
+- When the suggestion is multiline, I get the error `'replacement string' item contains newlines`.
+
+Tell me the modifications I need to make in order to accept one word at a time, then to accept the word on the line below if I have finished accepting the current line.
 
