try o1 for accepting words

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -51,5 +51,8 @@ When a suggestion is displayed, I want the user to be able to accept it word by 
 So, as far as there is a suggestion, if the user presses `<M-Right>`, 
 the first word of the suggestion is accepted and transformed into text at the same position.
 
-Tell me the modifications I need to make in order to achieve that.
+Note: Gihub Copilot and Supermaven Neovim plugins do that.
 
+The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
+
+Tell me the modifications I need to make in order to achieve accepting words of a suggestion and continue to the next line if the suggestion is multiline.
