--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -47,12 +47,21 @@ This is the behavior I want.
 
 ## Step 7: accept the suggestion word by word
 
-When a suggestion is displayed, I want the user to be able to accept it word by word with the `<M-Right>` key.
-So, as far as there is a suggestion, if the user presses `<M-Right>`, 
+When a suggestion is displayed, I want the user to be able to accept one word with the `<M-Right>` key.
+
+As far as there is a suggestion, if the user presses `<M-Right>`, 
 the first word of the suggestion is accepted and transformed into text at the same position.
 
 Note: Gihub Copilot and Supermaven Neovim plugins do that.
 
 The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
 
-Tell me the modifications I need to make in order to achieve accepting words of a suggestion and continue to the next line if the suggestion is multiline.
+With the current implementation, if the suggestion is on the same line as the cursor, he get the following error:
+
+```
+E5108: Error executing lua ...m/lazy/deepseek-complete/lua/rktmb-deepseek-complete.lua:92: attempt to get length of local 'leading_newlines' (a nil value)
+```
+
+This is because `M.accept_suggestion_word()` looks for a leading newline character in the suggestion but there is none because the suggestion is on the same line as the cursor.
+
+Tell me the changes I need to make in order to achieve accepting one word of a suggestion when issuing the `<M-Right>` key until the end of the line. Then continue to the next line, and so on.
